perf: Optimize scroll performance and final content synthesis

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <link rel="icon" type="image/png" href="/team/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="VYON LABS - Engineering the Future with cutting-edge AI, Cloud, and Software Solutions. Premium technology services for next-generation digital products." />
-  <meta name="keywords" content="AI, Machine Learning, Cloud Solutions, Software Development, VYON LABS, Technology" />
-  <meta name="author" content="VYON LABS" />
+    content="YUVON LABS - Engineering the Future with cutting-edge AI, Cloud, and Software Solutions. Premium technology services for next-generation digital products." />
+  <meta name="keywords" content="AI, Machine Learning, Cloud Solutions, Software Development, YUVON LABS, Technology" />
+  <meta name="author" content="YUVON LABS" />
 
-  <title>VYON LABS | Engineering the Future</title>
+  <title>YUVON LABS | Engineering the Future</title>
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="VYON LABS | Engineering the Future" />
+  <meta property="og:title" content="YUVON LABS | Engineering the Future" />
   <meta property="og:description"
     content="Next-generation AI, Cloud, and Software solutions that propel businesses into tomorrow." />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="VYON LABS | Engineering the Future" />
+  <meta name="twitter:title" content="YUVON LABS | Engineering the Future" />
 </head>
 
 <body>
