Edited link  details

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="author" content="VYON LABS" />
 
   <title>VYON LABS | Engineering the Future</title>
+  <link rel="canonical" href="https://vyonlabs.pages.dev/" />
 
   <!-- Open Graph / Social -->
   <meta property="og:type" content="website" />
